apps/site/src/content/docs/v3/runtime.mdx
---
title: Runtime 入门
description: 了解 Effect 的运行时系统如何以灵活高效的方式执行并发程序、管理资源并处理配置。
status: published
upstreamPath: v3/runtime.mdx
upstreamCommit: bf4625446a02894046b6937a317dde2cde115fe7
translators: [ecn-agent]
reviewers: [ecn-review]
sidebar:
  label: Runtime
  order: 6
---

`Runtime<R>` 数据类型表示一个能够**执行 effect** 的运行时系统。要运行一个 effect `Effect<A, E, R>`，我们需要一个 `Runtime<R>`，它包含由 `R` 类型参数所表示的必需资源。

`Runtime<R>` 由三个主要部分组成：

- 一个 `Context<R>` 类型的值
- 一个 `FiberRefs` 类型的值
- 一个 `RuntimeFlags` 类型的值

## 什么是运行时系统？

当我们编写 Effect 程序时，我们会使用各种构造器和组合子来构造一个 `Effect`。本质上，我们是在创建一份程序的蓝图。`Effect` 只是一个描述并发程序执行过程的数据结构。它表现为一种树状结构，把各种原语组合在一起，定义该 effect 应该做什么。

然而，这个数据结构本身不会执行任何动作，它仅仅是对一个并发程序的描述。

要执行这个程序，就需要 Effect 运行时系统登场。`Runtime.run*` 系列函数（例如 `Runtime.runPromise`、`Runtime.runFork`）负责接收这份蓝图并执行它。

当运行时系统运行一个 effect 时，它会创建一个根 Fiber，并用以下内容初始化它：

- 初始 [context](/docs/v3/requirements-management/services/#how-it-works)
- 初始的 `FiberRefs`
- 初始 effect

然后它启动一个循环，逐步执行 `Effect` 所描述的指令。

你可以把运行时看作这样一个系统：它接收一个 [`Effect<A, E, R>`](/docs/v3/getting-started/the-effect-type/) 及其关联的 context `Context<R>`，并产出 [`Exit<A, E>`](/docs/v3/data-types/exit/) 结果。

```text
┌────────────────────────────────┐
│  Context<R> + Effect<A, E, R>  │
└────────────────────────────────┘
               │
               ▼
┌────────────────────────────────┐
│      Effect Runtime System     │
└────────────────────────────────┘
               │
               ▼
┌────────────────────────────────┐
│          Exit<A, E>            │
└────────────────────────────────┘
```

运行时系统肩负着许多职责：

| 职责 | 说明 |
| --- | --- |
| **执行程序** | 运行时必须循环执行 effect 的每一个步骤，直到程序完成。 |
| **处理错误** | 它同时处理执行过程中出现的预期错误与意外错误。 |
| **管理并发** | 当调用 `Effect.fork` 时，运行时会生成新的 Fiber 来处理并发操作。 |
| **协作式让出** | 它确保 Fiber 不会独占资源，并在必要时让出控制权。 |
| **确保资源清理** | 运行时保证终结器正确运行，以便在需要时清理资源。 |
| **处理异步回调** | 运行时透明地处理异步操作，让你可以用统一的方式编写异步与同步代码。 |

## 默认运行时

当我们使用[运行 effect 的函数](/docs/v3/getting-started/running-effects/)（如 `Effect.runPromise` 或 `Effect.runFork`）时，我们实际上在不知不觉中使用了**默认运行时**。这些函数是为了方便我们用默认运行时执行 effect 而设计的快捷方式。

每个 `Effect.run*` 函数在内部都会调用对应的 `Runtime.run*` 函数，并把默认运行时传进去。例如，`Effect.runPromise` 只是 `Runtime.runPromise(defaultRuntime)` 的别名。

下面两种执行方式在功能上完全等价：

**示例**（使用默认运行时运行 effect）

```ts
import { Effect, Runtime } from "effect"

const program = Effect.log("Application started!")

Effect.runPromise(program)
/*
Output:
timestamp=... level=INFO fiber=#0 message="Application started!"
*/

Runtime.runPromise(Runtime.defaultRuntime)(program)
/*
Output:
timestamp=... level=INFO fiber=#0 message="Application started!"
*/
```

两种情况下，程序都使用默认运行时运行，并产生相同的输出。

默认运行时包括：

- 一个空的 [context](/docs/v3/requirements-management/services/#how-it-works)
- 一组包含[默认 services](/docs/v3/requirements-management/default-services/) 的 `FiberRefs`
- 一份默认的 `RuntimeFlags` 配置，其中启用了 `Interruption` 和 `CooperativeYielding`

在大多数场景下，使用默认运行时已足以执行 effect。不过，有些情况下创建一个自定义 runtime 会很有帮助，尤其是当你需要复用特定的配置或 context 时。

例如，在 React 应用里，或者在服务器上响应 API 请求执行操作时，你可能会通过初始化一个 [layer](/docs/v3/requirements-management/layers/) `Layer<R, Err, RIn>` 来创建 `Runtime<R>`。这样你就能在不同的执行边界之间保持一致 context。

## 局部作用域的运行时配置

在 Effect 中，运行时配置通常从父级工作流**继承**。这意味着，当我们在某个工作流内部访问运行时配置或获取一个 runtime 时，实际上使用的就是父级工作流的配置。

不过，有时我们想临时**覆盖代码中某个特定部分的运行时配置**。这个概念称为局部作用域的运行时配置。一旦该代码区域的执行结束，运行时配置就会**恢复**为原来的设置。

为此，我们使用 `Effect.provide` 函数，它允许我们把新的运行时配置提供给代码的某个特定区段。

**示例**（覆盖 Logger 配置）

在这个示例中，我们用 `Logger.replace` 创建一个简单的 logger，它用一个记录消息时不带时间戳和级别的自定义 logger 替换默认 logger。然后我们用 `Effect.provide` 把这个自定义 logger 应用到程序上。

```ts
import { Logger, Effect } from "effect"

const addSimpleLogger = Logger.replace(
  Logger.defaultLogger,
  // Custom logger implementation
  Logger.make(({ message }) => console.log(message)),
)

const program = Effect.gen(function* () {
  yield* Effect.log("Application started!")
  yield* Effect.log("Application is about to exit!")
})

// Running with the default logger
Effect.runFork(program)
/*
Output:
timestamp=... level=INFO fiber=#0 message="Application started!"
timestamp=... level=INFO fiber=#0 message="Application is about to exit!"
*/

// Overriding the default logger with a custom one
Effect.runFork(program.pipe(Effect.provide(addSimpleLogger)))
/*
Output:
[ 'Application started!' ]
[ 'Application is about to exit!' ]
*/
```

为了确保运行时配置只应用于 Effect 应用的某个特定部分，我们应该只把配置 layer 提供给那一个部分。

**示例**（把配置 layer 提供给嵌套的工作流）

在这个示例中，我们演示如何只把自定义 logger 配置应用到程序的某个特定区段。程序的大部分都使用默认 logger，但当我们应用 `Effect.provide(addSimpleLogger)` 调用时，它会覆盖那个特定嵌套块内部的 logger。之后，配置会恢复为原来的状态。

```ts
import { Logger, Effect } from "effect"

const addSimpleLogger = Logger.replace(
  Logger.defaultLogger,
  // Custom logger implementation
  Logger.make(({ message }) => console.log(message)),
)

const removeDefaultLogger = Logger.remove(Logger.defaultLogger)

const program = Effect.gen(function* () {
  // Logs with default logger
  yield* Effect.log("Application started!")

  yield* Effect.gen(function* () {
    // This log is suppressed
    yield* Effect.log("I'm not going to be logged!")

    // Custom logger applied here
    yield* Effect.log("I will be logged by the simple logger.").pipe(
      Effect.provide(addSimpleLogger),
    )

    // This log is suppressed
    yield* Effect.log(
      "Reset back to the previous configuration, so I won't be logged.",
    )
  }).pipe(
    // Remove the default logger temporarily
    Effect.provide(removeDefaultLogger),
  )

  // Logs with default logger again
  yield* Effect.log("Application is about to exit!")
})

Effect.runSync(program)
/*
Output:
timestamp=... level=INFO fiber=#0 message="Application started!"
[ 'I will be logged by the simple logger.' ]
timestamp=... level=INFO fiber=#0 message="Application is about to exit!"
*/
```

## ManagedRuntime

在开发 Effect 应用并使用 `Effect.run*` 函数执行它时，应用会在幕后自动使用默认运行时运行。虽然可以通过 `Effect.provide` 提供局部作用域的配置 layer 来调整应用的特定部分，但有些场景下你可能想**从顶层为整个应用自定义运行时配置**。

在这些情况下，你可以使用 `ManagedRuntime.make` 构造器把一个配置 layer 转换成 runtime，从而创建顶层 runtime。

**示例**（创建并使用自定义 ManagedRuntime）

在这个示例中，我们首先创建一个名为 `appLayer` 的自定义配置 layer，它用一个会把消息输出到控制台的简单 logger 替换默认 logger。接着，我们用 `ManagedRuntime.make` 把这个配置 layer 变成 runtime。

```ts
import { Effect, ManagedRuntime, Logger } from "effect"

// Define a configuration layer that replaces the default logger
const appLayer = Logger.replace(
  Logger.defaultLogger,
  // Custom logger implementation
  Logger.make(({ message }) => console.log(message)),
)

// Create a custom runtime from the configuration layer
const runtime = ManagedRuntime.make(appLayer)

const program = Effect.log("Application started!")

// Execute the program using the custom runtime
runtime.runSync(program)

// Clean up resources associated with the custom runtime
Effect.runFork(runtime.disposeEffect)
/*
Output:
[ 'Application started!' ]
*/
```

### Effect.Tag

在与需要四处传递的 runtime 打交道时，`Effect.Tag` 可以帮助简化对 service 的访问。它让你可以定义一个新的 tag，并把 service 的形状直接嵌入到该 tag 类的静态属性中。

**示例**（为通知定义一个 Tag）

```ts
import { Effect } from "effect"

class Notifications extends Effect.Tag("Notifications")<
  Notifications,
  { readonly notify: (message: string) => Effect.Effect<void> }
>() {}
```

在这个设置中，service 的各个字段（这里指 `notify` 方法）会变成 `Notifications` 类的静态属性，从而更容易访问它们。

这让你可以直接与该 service 交互：

**示例**（使用 Notifications Tag）

```ts
import { Effect } from "effect"

class Notifications extends Effect.Tag("Notifications")<
  Notifications,
  { readonly notify: (message: string) => Effect.Effect<void> }
>() {}

// Create an effect that depends on the Notifications service
//
//      ┌─── Effect<void, never, Notifications>
//      ▼
const action = Notifications.notify("Hello, world!")
```

在这个示例中，`action` effect 依赖于 `Notifications` service。这种方式让你无需手动传递就能引用 service。之后，你可以创建一个提供 `Notifications` service 的 `Layer`，并用该 layer 构建 `ManagedRuntime`，以确保该 service 在需要的地方可用。

### 集成

`ManagedRuntime` 简化了 service 与 layer 同其他框架或工具的集成，尤其是在 Effect 并非主要框架、且对主入口点的访问受到限制的环境中。

例如，在 React 这类框架或环境中，你对应用主入口点的控制有限，`ManagedRuntime` 有助于管理 service 的生命周期。

下面介绍如何在外部框架中管理 service 的生命周期：

**示例**（在外部框架中使用 `ManagedRuntime`）

```ts
import { Effect, ManagedRuntime, Layer, Console } from "effect"

// Define the Notifications service using Effect.Tag
class Notifications extends Effect.Tag("Notifications")<
  Notifications,
  { readonly notify: (message: string) => Effect.Effect<void> }
>() {
  // Provide a live implementation of the Notifications service
  static Live = Layer.succeed(this, {
    notify: (message) => Console.log(message),
  })
}

// Example entry point for an external framework
async function main() {
  // Create a custom runtime using the Notifications layer
  const runtime = ManagedRuntime.make(Notifications.Live)

  // Run the effect
  await runtime.runPromise(Notifications.notify("Hello, world!"))

  // Dispose of the runtime, cleaning up resources
  await runtime.dispose()
}
```
